IT: cleanup
Yet another round

Changes:
* get rid of Guava (2 classes affected)
* align dependencies
* align plugins